Fixed alignment issue on small screen.

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -107,6 +107,11 @@ main,
         grid-template-columns: 1fr;
         grid-template-rows: max-content max-content 1fr max-content;
 
+        > main,
+        > aside {
+            margin: 0;
+        }
+
         > aside {
             position: static;
         }
